# Teams_CRUD

./: CMakeLists.txt  ECountry.h  ELigue.h  LinkedDouble.cpp  LinkedDouble.h  Node.h  README.md  TeamManagement.cpp  TeamManagement.h  Teams.cpp  Teams.h  main.cpp
